--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "object-reduce_right",
+  "name": "@nathanfaucett/object-reduce_right",
   "version": "0.0.1",
   "description": "object reduce from the right for the browser and node.js",
   "repository": {
@@ -11,7 +11,7 @@
     "test": "npm run test-node",
     "test-node": "node ./test | ./node_modules/.bin/tap-spec",
     "test-node-raw": "node ./test",
-    "test-browser-local": "zuul --local 8080 --ui tape -- ./test"
+    "test-browser-local": "zuul --local 9999 --ui tape -- ./test"
   },
   "keywords": [
     "object-reduce_right",
@@ -21,14 +21,15 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13",
     "tap-spec": "^4.0.0",
     "tape": "^4.0.0",
     "zuul": "^3.0.0"
   },
   "dependencies": {
-    "keys": "git://github.com/nathanfaucett/keys.git"
+    "@nathanfaucett/keys": "^0.0.1",
+    "@nathanfaucett/is_undefined": "^0.0.1"
   }
 }
